[package]
name = "exc-clickhouse"
version = "0.1.0"
edition = "2024"
authors = ["Eisen Labs"]
description = "Exchange data collector to clickhouse db"

[dependencies]
alloy = { version = "0.15.10", features = ["full"] }
arrayvec = "0.7.6"
async-trait = "0.1.88"
clickhouse = { version = "0.13.2", features = ["inserter"] }
dotenv = "0.15.0"
eyre = "0.6.12"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full", "tracing"] }
tokio-stream = "0.1.17"
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
uuid = { version = "1.4", features = ["v4"] }
