[package]
name = "exc-clickhouse"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Eisen Labs"]
description = "Exchange data collector to clickhouse db"
[lib]
path = "src/lib.rs"


[dependencies]
alloy = { version = "1", features = ["full"] }
arrayvec = "0.7.6"
async-stream = "0.3.6"
async-trait = "0.1.88"
aws-config = "1.5.8"
aws-credential-types = "1.2.3"
aws-sdk-s3 = "1.63.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
clickhouse = { version = "0.13.2", features = ["inserter", "time", "chrono", "lz4"] }
csv = "1.3.1"
dotenv = "0.15.0"
eyre = "0.6.12"
flate2 = "1.0.35"
futures = "0.3.31"
moka = { version = "0.12.10", features = ["sync"] }
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9"
tempfile = "3.14.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full", "tracing"] }
tokio-stream = "0.1.17"
tokio-tungstenite = { version = "0.27", features = ["native-tls"] }
tower = { version = "0.5.2", features = ["util", "limit", "timeout"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
uuid = { version = "1.4", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
ordered-float = "5.0.0"
itertools = "0.14.0"
parking_lot = "0.12"
aws-types = "1.3.7"
